Added package-lock.json, updated readme link, added keywords to package.json, added title to index page.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labs",
+  "name": "harp-labs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/pschfr/labs.git"
   },
-  "keywords": [],
+  "keywords": [
+    "harp",
+    "harpjs"
+  ],
   "author": "Paul Schaefer",
   "license": "MIT",
   "bugs": {
